
  v1.7, __._.____
  - fixed: clear CF in case int 31h hook proc handles the function (ax=0x20x).
  - added soundfont support from vsbhdasf.
  - fixed: array bounds check in vopl3.cpp added (& 0xff).

  v1.6, 10.6.2025
  - fixed: some port trap variables weren't initialized if real-mode port
    trapping was disabled.
  - fixed: debug displays may have caused a GPF.
  - VSBHDA16: option /DIVE added; enable Borland "Runtime error 200" fix.
  - fixed: VPIC EOI check now tests bits 5/6 of OCW2; handles specific EOIs.
  - fixed VMPU: set UART mode cmd 0x3F added.
  - fixed regression v1.4-v1.5: if DAC had no amplifier, volume was very low
    and couldn't be changed with /VOL.

  v1.5, 8.6.2024
  - MPU port emulation if BLASTER variable contains P=xxx.
  - cmdline option /P added.
  - cmdline option /SD added.
  - fix: volume for SB Live/Audigy wasn't set correctly.
  - trap PIC port to reject attempts to mask the real sound hw interrupt
    (Rational DOS extender).
  - switch to client context for SB interrupt emulation.
  - HDA: improved error msg if card init fails.
  - IRQ 2 accepted.
  - fix: SFX noise in tyrian2k, also may be in other games that use
    non-autoinit DSP cmds.

  v1.4, 20.4.2024
  - added 16-bit protected-mode variant vsbhda16.exe.
  - reworked HDA initialization code.
  - Creative's diagnose.exe accepts vsbhda's SB emulation.
  - fix: virtual DMA address may have been too high (crash in tyrian2k).
  - fix: writes to virtual DMA channel ports C0h-DFh caused writes to
    ports 10-1Fh.
  - handle "Runtime Error 200" issue in vsbhda16.
  - fix: DSP cmd 0x91 now handled correctly.
  - fix: virtual DMA register reads of 08/D0 (status) corrected.
  - removed stack checks for C++ sources.
  - fix: mixer volume setting for HDA devices.
  - cmdline option /BS added.
  - direct DSP cmd 0x10 supported.

  v1.3, 5.3.2024
  - source made compatible with Open Watcom 2.0.
  - tool chain changed to Open Watcom 2.0.

  v1.2, 26.2.2024