@@ -47,6 +47,7 @@ uint32_t VSB_SetPos(uint32_t pos); //set pos in bytes
 int VSB_GetAuto( void );
 void VSB_SetIRQStatus( uint8_t );
 int VSB_GetIRQStatus( void );
+int VSB_GetIRQTrigger( void );
 uint8_t VSB_GetMixerReg(uint8_t index);
 int VSB_GetDirectCount(uint8_t * *);
 void VSB_ResetDirectCount( void );
