@@ -1,8 +1,13 @@
 
   v1.7, __._.____
   - fixed: clear CF in case int 31h hook proc handles the function (ax=0x20x).
-  - added soundfont support from vsbhdasf.
+  - added soundfont support from VSBHDASF.
   - fixed: array bounds check in vopl3.cpp added (& 0xff).
+  - fixed: handling of DSP cmd E2 (DMA identification).
+  - switch TRIGGERIRQ activated; this should make more detection routines
+    to work.
+  - qpiemu.dll: bit 1 of register CH now holds IF.
+  - XMSRes.exe: option -H added.
 
   v1.6, 10.6.2025
   - fixed: some port trap variables weren't initialized if real-mode port
